added nav section

--- a/index.html
+++ b/index.html
@@ -35,10 +35,25 @@
       </script>
 </head>
 <body>
+
+    <!-- navbar section start  -->
+        <div class="flex justify-between text-black p-5 ">
+            <button class="text-black font-semibold px-2 py-1 rounded-md text-2xl">Home</button>
+            <li class="flex justify-between lg:w-2/4">
+                <button class="transition ease-in-out delay-150 bg-white hover:-translate-y-1 hover:scale-110 hover:bg-indigo-500 duration-300 ... px-2 py-1 rounded-md drop-shadow-xl">About Us</button>
+                <button class="transition ease-in-out delay-150 bg-white hover:-translate-y-1 hover:scale-110 hover:bg-indigo-500 duration-300 ... px-2 py-1 rounded-md drop-shadow-xl">profile</button>
+                <button class="transition ease-in-out delay-150 bg-white hover:-translate-y-1 hover:scale-110 hover:bg-indigo-500 duration-300 ... px-2 py-1 rounded-md drop-shadow-xl">Settings</button>
+                <button class="transition ease-in-out delay-150 bg-white hover:-translate-y-1 hover:scale-110 hover:bg-indigo-500 duration-300 ... px-2 py-1 rounded-md drop-shadow-xl">login</button>
+            </li>
+        </div>
+    <!-- navbar section end -->
     <!-- header section start  -->
-        <div class="bg-header bg-cover object-cover object-center h-screen pt-24  font-bebas flex items-center justify-center">
-            <img src="./images/favicon/favicon.png" style="height: 50px; width: 50px; " alt="">
-            <h2 class="font-comfortaa font-semibold text-2xl md:text-4xl lg:text-6xl">photo</h2>
+        <div class="bg-header bg-cover object-cover object-center h-screen lg:pt-12  font-bebas flex items-center justify-center">
+                <div class="flex">
+                    <img src="./images/favicon/favicon.png" style="height: 50px; width: 50px; " alt="">
+                     <h2 class="font-comfortaa font-semibold text-3xl md:text-3xl lg:text-4xl">photo</h2>
+                </div>
+            
         </div>
     <!-- header section end -->
 </body>
